# aopt

./: Cargo.toml  README.md  Release.md  TODO.md
aopt/: Cargo.toml  README.md  Release.md
aopt-help/: Cargo.toml  README.md
aopt-help/src/: block.rs  cmd.rs  error.rs  format.rs  lib.rs  store.rs  style.rs  temp.rs  wrapper.rs
aopt-help/src/format/: policy.rs
aopt-macro/: Cargo.toml
aopt-macro/src/: lib.rs
aopt-shell/: Cargo.toml  Readme.md
aopt-shell/src/: lib.rs  script.rs  shell.rs  value.rs
aopt-shell/src/script/: bash.rs  fish.rs  ps1.rs  ps7.rs  zsh.rs
aopt-shell/src/shell/: bash.rs  fish.rs  ps1.rs  zsh.rs
aopt/examples/: 01_prefix_option.rs  02_option_value.rs  03_combination_style.rs  04_positional.rs  05_overload.rs  06_callback.rs  07_callback.rs
aopt/src/: aext.rs  app.rs  arg.rs  args.rs  ctx.rs  err.rs  ext.rs  lib.rs  map.rs  opt.rs  parser.rs  pat.rs  proc.rs  raw.rs  ser.rs  set.rs  shell.rs  sim.rs  str.rs  temp.rs  uid.rs  value.rs
aopt/src/aopt/: aopt_all.rs  aopt_bool.rs  aopt_cmd.rs  aopt_flt.rs  aopt_int.rs  aopt_main.rs  aopt_pos.rs  aopt_str.rs  aopt_uint.rs  creator.rs  data.rs  mod.rs  simple_macro.rs
aopt/src/arg/: args.rs  argument.rs  mod.rs  osstr_unix.rs  osstr_win.rs  parser.rs  parser_cl.rs  parser_null.rs
aopt/src/args/: unix.rs  win.rs
aopt/src/ctx/: context.rs  ctx.rs  data.rs  extract.rs  handler.rs  invoke.rs  mod.rs  nonopt.rs  opt.rs  store.rs  value.rs
aopt/src/ext/: ctx.rs  ser.rs
aopt/src/guess/: delay.rs  first.rs  invoke.rs  mod.rs  multi.rs  noa.rs  single.rs  style.rs
aopt/src/opt/: action.rs  aopt.rs  callback.rs  callback_sync.rs  cb.rs  config.rs  creator.rs  help.rs  index.rs  infer.rs  info.rs  init.rs  initiator.rs  mod.rs  nonopt.rs  opt.rs  parser.rs  policy.rs  serde.rs  serialize.rs  store.rs  style.rs  uopt.rs  valid.rs  value.rs
aopt/src/opt/nonopt/: cmd.rs  main.rs  pos.rs
aopt/src/opt/opt/: array.rs  bool.rs  example.rs  flt.rs  int.rs  str.rs  uint.rs
aopt/src/parser/: check.rs  checker.rs  commit.rs  delay_parser.rs  delay_policy.rs  failure.rs  forward_policy.rs  infered.rs  optset.rs  parser.rs  policy_delay.rs  policy_fwd.rs  policy_pre.rs  policy_seq.rs  pre_parser.rs  pre_policy.rs  process.rs  returnval.rs  service.rs  simple_parser.rs  state.rs  storage.rs  style.rs  testutil.rs  ucommit.rs
aopt/src/policy/: common.rs  forward.rs  guess_style.rs  mod.rs  policy_delay.rs  policy_forward.rs  policy_fwd.rs  policy_pre.rs  pre.rs  process.rs  style.rs
aopt/src/proc/: match_noa.rs  match_opt.rs  mod.rs  noa.rs  nonopt.rs  opt.rs  proc_noa.rs  proc_opt.rs
aopt/src/ser/: anyval.rs  check.rs  data.rs  invoke.rs  mod.rs  noa.rs  rawval.rs  userval.rs  value.rs
aopt/src/set/: commit.rs  filter.rs  index.rs  infered.rs  info.rs  mod.rs  optset.rs  optvalid.rs  parser.rs  simple_set.rs  ucommit.rs
aopt/src/shell/: guess.rs  policy.rs
aopt/src/sync/ctx/: invoke.rs  store.rs
aopt/src/sync/opt/: creator.rs
aopt/src/value/: accessor.rs  infer.rs  initializer.rs  initiator.rs  parser.rs  store.rs  storer.rs  validator.rs
cote/: Cargo.toml  README.md
cote-derive/: Cargo.toml  README.md
cote-derive-refactor/: Cargo.toml
cote-derive-refactor/src/: gen.rs  lib.rs  value.rs
cote-derive-refactor/src/config/: cote.rs
cote-derive/src/: analyzer.rs  config.rs  gen.rs  global.rs  lib.rs  lifetime_gen.rs  parser.rs  value.rs
cote-derive/src/config/: alter.rs  arg.rs  cote.rs  fetch.rs  infer.rs  sub.rs  value.rs
cote/examples/: 01_quick_start.rs  02_config_policy.rs  03_config_help.rs  04_config_style.rs  05_embedded_value_plus.rs  06_option_demo.rs  07_positional_demo.rs  08_command_flag_demo.rs  09_sub_command_demo.rs  10_arg_name_alias.rs  11_arg_hint_help.rs  12_arg_index.rs  13_arg_index.rs  14_arg_force.rs  15_arg_action.rs  16_arg_handler.rs  17_arg_validator.rs  18_arg_no_delay.rs  19_sub_command.rs  20_sub_name_alias.rs  21_sub_help.rs  22_sub_optional.rs  23_wrapper.rs  24_rawvalparser.rs  25_flag.rs  26_method_call.rs  27_result_demo.rs  28_duplicate_cmd.rs  30_capture_args.rs  31_modify_prefix.rs  32_shell_completion.rs  33_sub_shell_completion.rs
cote/src/: _reference.rs  _toturial.rs  _tutorial.rs  alter.rs  ctx.rs  help.rs  infer.rs  inject.rs  lib.rs  main.rs  meta.rs  null.rs  parser.rs  rctx.rs  ser.rs  services.rs  shell.rs  valid.rs  value.rs  wrap.rs
cote/test/: 01_policy.rs  02_head_foot.rs  03_strict.rs  04_on.rs  05_fallback.rs  06_value.rs  07_index.rs  08_force.rs  09_action.rs  10_fetch.rs  11_valid.rs  12_on.rs  13_policy.rs  14_help.rs  15_force.rs  16_infer.rs  17_fetch.rs  19_map.rs
cote/tests/: 01_policy.rs  02_head_foot.rs  03_strict.rs  04_on.rs  05_fallback.rs  06_value.rs  07_index.rs  08_force.rs  09_action.rs  10_fetch.rs  11_valid.rs  12_on.rs  13_policy.rs  14_help.rs  15_force.rs  16_infer.rs  17_fetch.rs  18_value.rs  19_map.rs  20_completion.rs  21_sub_completion.rs  22_completion.rs
getopt-rs/: Cargo.toml
getopt-rs-help/: Cargo.toml
getopt-rs-help/src/: err.rs  format.rs  lib.rs  printer.rs  store.rs  style.rs  temp.rs  wrapper.rs
getopt-rs/src/: app.rs  arg.rs  ctx.rs  err.rs  lib.rs  opt.rs  parser.rs  pat.rs  pattern.rs  proc.rs  set.rs  str.rs  uid.rs
getopt-rs/src/arg/: argument.rs  parser.rs
getopt-rs/src/ctx/: delay.rs  nonopt.rs  opt.rs
getopt-rs/src/opt/: array.rs  bool.rs  builder.rs  callback.rs  cmd.rs  example.rs  flt.rs  help.rs  index.rs  int.rs  main.rs  nonopt.rs  opt.rs  parser.rs  pos.rs  str.rs  style.rs  uint.rs  value.rs
getopt-rs/src/parser/: check.rs  delay_parser.rs  forward.rs  gen_style.rs  pre_parser.rs  simple.rs  simple_parser.rs  state.rs  testutil.rs
getopt-rs/src/proc/: nonopt.rs  opt.rs  seq.rs  single.rs
getopt-rs/src/set/: commit.rs  creator.rs  filter.rs  info.rs  parser.rs  simple_set.rs
index-constituent/: Cargo.toml
index-constituent/src/: main.rs  spyder.rs
index-constituent/src/spyder/: cnindex.rs  csindex.rs
simple-find-file/: Cargo.toml
simple-find-file/src/: main.rs
snowball-follow/: Cargo.toml
snowball-follow/src/: main.rs
(+32 files in other folders)
