[workspace]

members = [
    "aopt",
    "aopt-help",
    "cote",
    "cote-derive",
    "index-constituent",
    "simple-find-file",
    "snowball-follow",
]
resolver = "2"

[workspace.dependencies]
aopt = { path = "aopt", version = "0.16" }
aopt-help = { path = "aopt-help", version = "0.3" }
cote = { path = "cote", version = "0.8" }
cote-derive = { path = "cote-derive", version = "0.6" }

ahash = "0.8"
async-trait = "0.1"
chrono = "0.4"
color-eyre = "0.6"
neure = "0.6"
json = "0.12"
regex = "1.10"
reqwest = { version = "0.12", features = [
    "json",
    "gzip",
    "cookies",
] }
tracing = { version = "0.1" }
tokio = { version = "1.23", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
] }
textwrap = { version = "0.16", default-features = false, features = [
    "unicode-width",
    "smawk",
] }
