[workspace]

members = [
    "aopt",
    "aopt-core",
    "aopt-help",
    "aopt-shell",
    "cote",
    "cote-derive",
    "index-constituent",
    "simple-find-file",
    "snowball-follow",
]
resolver = "2"

[workspace.dependencies]
aopt-core = { path = "aopt-core", version = "1.0" }
aopt-shell = { path = "aopt-shell", version = "0.1" }
aopt = { path = "aopt", version = "1.3" }
aopt-help = { path = "aopt-help", version = "0.3" }
cote = { path = "cote", version = "0.14" }
cote-derive = { path = "cote-derive", version = "0.11" }

ahash = "0.8"
async-trait = "0.1"
chrono = "0.4"
color-eyre = "0.6"
neure = "0.6"
json = "0.12"
regex = "1.10"
reqwest = { version = "0.12", features = [
    "json",
    "gzip",
    "cookies",
] }
tracing = { version = "0.1" }
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
] }
textwrap = { version = "0.16", default-features = false, features = [
    "unicode-width",
    "smawk",
] }
