[package]
name = "aopt-help"
version = "0.3.3"
authors = ["araraloren <araraloren@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Generate help message for command line program"
repository = "https://github.com/araraloren/aopt/"
keywords = ["getopt", "cli", "help", "usage"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name="temp"
path="src/temp.rs"

[dependencies]
textwrap = "0.16.0"
thiserror = "1.0.30"