[package]
name = "aopt-macro"
version = "0.0.3"
authors = ["araraloren <araraloren@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "getopt macro for aopt"
repository = "https://github.com/araraloren/aopt/"
keywords = ["getopt", "macro", "syn"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
syn = { version = "1.0.86", features = [ "extra-traits", "full" ] }
proc-macro2 = "1.0.36"
quote = "1.0.15"

[lib]
proc-macro = true