[package]
name = "aopt"
version = "0.11.3"
authors = ["araraloren <blackcatoverwall@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A flexible and typed getopt tools"
repository = "https://github.com/araraloren/aopt/"
keywords = ["getopt", "cli"]
categories = ["command-line-interface"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
neure = "0.3"
serde = { version = "1.0", features = [ "derive" ], optional = true }
tracing = { version = "0.1", optional = true }

[features]
sync = []
utf8 = []
shell = []
log = ["tracing"]
serde = ["serde/derive"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]