[package]
name = "aopt"
version = "0.16.0"
authors = [
    "araraloren <blackcatoverwall@gmail.com>",
]
edition = "2021"
license = "MPL-2.0"
description = "A flexible and typed getopt tools"
repository = "https://github.com/araraloren/aopt/"
keywords = ["getopt", "cli"]
categories = ["command-line-interface"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash.workspace = true
neure.workspace = true
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
sync = []
shell = []
log = ["tracing"]
serde = ["serde/derive"]

[package.metadata.docs.rs]
cargo-args = [
    "-Zunstable-options",
    "-Zrustdoc-scrape-examples",
]
