[package]
name = "aopt"
version = "1.3.0"
authors = [
    "araraloren <blackcatoverwall@gmail.com>",
]
edition = "2021"
license = "MPL-2.0"
description = "A flexible and typed getopt tools"
repository = "https://github.com/araraloren/aopt/"
keywords = ["getopt", "cli"]
categories = ["command-line-interface"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neure.workspace = true
aopt-core.workspace = true
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
aopt-shell = { workspace = true, optional = true }

[features]
default = []
sync = ["aopt-core/sync", "aopt-shell?/sync"]
shell = ["aopt-shell"]
log = [
    "tracing",
    "aopt-core/log",
    "aopt-shell?/log",
]
serde = [
    "serde/derive",
    "aopt-core/serde",
    "aopt-shell?/serde",
]

[package.metadata.docs.rs]
all-features = true
cargo-args = [
    "-Zunstable-options",
    "-Zrustdoc-scrape-examples",
]
rustdoc-args = [
    "--cfg",
    "docsrs",
    "--generate-link-to-definition",
]
