[package]
name = "cote-derive"
version = "0.6.0"
authors = [
    "araraloren <blackcatoverwall@gmail.com>",
]
edition = "2021"
license = "MPL-2.0"
description = "Quickly build your command line utils"
repository = "https://github.com/araraloren/aopt/"
keywords = ["getopt", "cli", "proc-macro", "aopt"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = [
    "extra-traits",
    "full",
] }
proc-macro2 = "1.0"
quote = "1.0"

[lib]
proc-macro = true
