[package]
name = "cote"
version = "0.4.3"
authors = ["araraloren <blackcatoverwall@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Quickly build your command line utils"
repository = "https://github.com/araraloren/aopt/"
keywords = ["getopt", "cli"]
categories = ["command-line-interface"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aopt = "0.11"
cote-derive = "0.2"
aopt-help = "0.3"
serde = { version = "1.0", features = [ "derive" ], optional = true }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.26", features = ["full"] }
color-eyre = "0.5"
regex = "1.9"

[features]
sync = ["aopt/sync"]
utf8 = ["aopt/utf8"]
serde = ["aopt/serde", "serde/derive"]
log = ["aopt/log"]