[package]
name = "cote"
version = "0.11.0"
authors = [
    "araraloren <blackcatoverwall@gmail.com>",
]
edition = "2021"
license = "MPL-2.0"
description = "Quickly build your command line utils"
repository = "https://github.com/araraloren/aopt/"
keywords = ["getopt", "cli"]
categories = ["command-line-interface"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aopt = { workspace = true }
aopt-help.workspace = true
cote-derive.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
color-eyre.workspace = true
regex.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
sync = ["aopt/sync"]
serde = ["aopt/serde", "serde/derive"]
log = ["aopt/log"]
shell = ["aopt/shell"]

[package.metadata.docs.rs]
all-features = true
cargo-args = [
    "-Zunstable-options",
    "-Zrustdoc-scrape-examples",
]
