[package]
name = "getopt-rs-help"
version = "0.1.0"
authors = ["araraloren <araraloren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name="temp"
path="src/temp.rs"

[dependencies]
textwrap = "0.14"
thiserror = "1.0"
ustr = "0.8"