[package]
name = "getopt-rs-help"
version = "0.1.0"
authors = ["araraloren <araraloren@gmail.com>"]
edition = "2018"
license = "Mozilla Public License 2.0"
description = "Generate help message for getopt-rs"
repository = "https://github.com/araraloren/getopt-rs/"
keywords = ["getopt", "cli", "help", "usage"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name="temp"
path="src/temp.rs"

[dependencies]
textwrap = "0.14.2"
thiserror = "1.0.30"
ustr = "0.8.1"