[package]
name = "getopt-rs"
version = "0.2.0"
authors = ["araraloren <blackcatoverwall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
ustr = "0.8"