[package]
name = "getopt-rs"
version = "0.3.0"
authors = ["araraloren <blackcatoverwall@gmail.com>"]
edition = "2018"
license = "Mozilla Public License 2.0"
description = "A flexible and typed getopt tools"
repository = "https://github.com/araraloren/getopt-rs/"
keywords = ["getopt", "cli"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = "0.3.2"
ustr = "0.8.1"