[package]
name = "index"
version = "0.3.3"
edition = "2021"
license = "MPL-2.0"
authors = [
    "araraloren <blackcatoverwall@gmail.com>",
]
description = "Example - simple spyder get index constituents"
repository = "https://github.com/araraloren/aopt/"
categories = ["command-line-interface", "spyder"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aopt.workspace = true
aopt-help.workspace = true
async-trait.workspace = true
cote.workspace = true
color-eyre.workspace = true
chrono.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
json.workspace = true
