[package]
name = "ff"
version = "0.4.0"
authors = ["araraloren <blackcatoverwall@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Example - simple file search tools"
repository = "https://github.com/araraloren/aopt/"
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aopt = { path = "../aopt" }
aopt-help = { path = "../aopt-help" }
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
color-eyre = "0.5.11"
regex = "1.5.4"