[package]
name = "ff"
version = "0.5.5"
authors = [
    "araraloren <blackcatoverwall@gmail.com>",
]
edition = "2021"
license = "MPL-2.0"
description = "Example - simple file search tools"
repository = "https://github.com/araraloren/aopt/"
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex.workspace = true
aopt.workspace = true
aopt-help.workspace = true
color-eyre.workspace = true
tracing-subscriber.workspace = true
