[package]
name = "snow"
version = "0.4.0"
edition = "2018"
license = "MPL-2.0"
authors = ["araraloren <blackcatoverwall@gmail.com>"]
description = "Example - simple spyder get follow people count on xueqiu.com"
repository = "https://github.com/araraloren/aopt/"
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aopt = "^0.9.11"
aopt-help = "0.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
color-eyre = "0.6.2"
reqwest = { version = "0.11.13", features = ["json", "gzip", "cookies"] }
tokio = { version = "1.23.0", features = ["full"] }
json = "0.12.4"