[package]
name = "snow"
version = "0.4.1"
edition = "2018"
license = "MPL-2.0"
authors = [
    "araraloren <blackcatoverwall@gmail.com>",
]
description = "Example - simple spyder get follow people count on xueqiu.com"
repository = "https://github.com/araraloren/aopt/"
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aopt.workspace = true
aopt-help.workspace = true
color-eyre.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
json.workspace = true
